Added an assert on unique-model relationships
Decision: children and collections should be handled manually

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ampersand-registry": "^0.2.4"
   },
   "devDependencies": {
+    "ampersand-collection": "^2.0.0",
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
     "proxyquire": "^1.7.9"
